# memories

./: .gitignore  MANIFEST.in  README.md  index.html  memories.py  pyproject.toml
memories/: __init__.py
memories/static/: main.css
memories/templates/: edit.html  index.html
static/: main.css  main.js
templates/: base.html  edit.html  index.html  memories.html
